force-app/main/default/objects/Log__e/fields/clusterId__c.field-meta.xml
<CustomField>
    <fullName>clusterId__c</fullName>
    <description>JSONs of clustered Events will be saved as attachment</description>
    <label>Cluster Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>