force-app/main/default/objects/Log__e/fields/ClusterSequence__c.field-meta.xml
<CustomField>
    <fullName>ClusterSequence__c</fullName>
    <description>if clustered, stores the position of the event in the cluster</description>
    <label>Cluster Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>