force-app/main/default/objects/Log__e/fields/isException__c.field-meta.xml
<CustomField>
    <fullName>isException__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates log event was raised during an exception</description>
    <label>is Exception</label>
    <type>Checkbox</type>
</CustomField>