force-app/main/default/objects/Log__e/fields/LogEntriesJSON__c.field-meta.xml
<CustomField>
    <fullName>LogEntriesJSON__c</fullName>
    <description>Is expected to contain a JSON of a List&lt;Logger.LogEntry></description>
    <label>LogEntries JSON</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>