force-app/main/default/objects/Log__e/fields/Trace__c.field-meta.xml
<CustomField>
    <fullName>Trace__c</fullName>
    <description>contains current trace in format className:methodName:line:column</description>
    <label>Trace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>