force-app/main/default/objects/Log__e/fields/transactionUUID__c.field-meta.xml
<CustomField>
    <fullName>transactionUUID__c</fullName>
    <label>transactionUUID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>