force-app/main/default/objects/Log__e/fields/TriggerOperation__c.field-meta.xml
<CustomField>
    <fullName>TriggerOperation__c</fullName>
    <description>Indicates this Log Event belongs to a specific trigger operation</description>
    <label>Trigger Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>